# AICreateStudio-X

./: .editorconfig  .eslintrc.json  .gitignore  CLAUDE.md  tsconfig.json
.github/workflows/: ci.yml
backend/: pyproject.toml
docs/: SCOPE_PROGRESS.md  requirements.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  providers.tsx
frontend/src/app/(protected)/dashboard/: page.tsx
frontend/src/app/(protected)/profile/: page.tsx
frontend/src/app/(public)/login/: page.tsx
frontend/src/components/: ThemeRegistry.tsx
frontend/src/components/common/: ProtectedRoute.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/layouts/: MainLayout.tsx  PublicLayout.tsx
frontend/src/lib/: emotion-cache.ts
frontend/src/lib/auth/: mockAuthService.ts
frontend/src/theme/: README.md  components.ts  index.ts  palette.ts  typography.ts
frontend/src/types/: index.ts
mockups/: design-theme-selector.html
